<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.absolutgg</groupId>
    <artifactId>AbsolutEvents</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>AbsolutEvents</name>
    <description>Plugin de eventos para servidores Paper</description>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <paper.version>1.21.11-R0.1-SNAPSHOT</paper.version>

        <placeholderapi.version>2.11.6</placeholderapi.version>
        <vault.version>1.7.1</vault.version>
        <simpleclans.version>2.19.2</simpleclans.version>

        <xseries.version>13.3.3</xseries.version>
        <inventoryapi.version>2.0.3</inventoryapi.version>
        <iridiumcolorapi.version>1.0.9</iridiumcolorapi.version>

        <gson.version>2.10.1</gson.version>
        <sqlite.version>3.46.1.3</sqlite.version>
        <hikari.version>5.1.0</hikari.version>
        <jsonsimple.version>1.1.1</jsonsimple.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>

        <repository>
            <id>simpleclans</id>
            <url>https://repo.roinujnosde.me/releases/</url>
        </repository>

        <repository>
            <id>iridiumdevelopment</id>
            <url>https://nexus.iridiumdevelopment.net/repository/maven-releases/</url>
        </repository>

        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>

        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <repository>
            <id>enginehub</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>

        <repository>
            <id>phoenix</id>
            <url>https://nexus.phoenixdevt.fr/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>${placeholderapi.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>${vault.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.sacredlabyrinth.phaed.simpleclans</groupId>
            <artifactId>SimpleClans</artifactId>
            <version>${simpleclans.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.cryptomorin</groupId>
            <artifactId>XSeries</artifactId>
            <version>${xseries.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.HenryFabio</groupId>
            <artifactId>inventory-api</artifactId>
            <version>${inventoryapi.version}</version>
        </dependency>

        <dependency>
            <groupId>com.iridium</groupId>
            <artifactId>IridiumColorAPI</artifactId>
            <version>${iridiumcolorapi.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${gson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${jsonsimple.version}</version>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>${sqlite.version}</version>
        </dependency>

        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>${hikari.version}</version>
        </dependency>

        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.2.1</version>
        </dependency>

        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.3.5</version>
            <scope>provided</scope>
        </dependency>

        <!-- ItemsAdder via JitPack -->
        <dependency>
            <groupId>com.github.LoneDev6</groupId>
            <artifactId>API-ItemsAdder</artifactId>
            <version>3.6.3-beta-14</version>
            <scope>provided</scope>
        </dependency>

        <!-- MythicLib é dependência do MMOItems-API -->
        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>MythicLib-dist</artifactId>
            <version>1.7.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.Indyuce</groupId>
            <artifactId>MMOItems-API</artifactId>
            <version>6.10-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}</finalName>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>

                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <minimizeJar>false</minimizeJar>

                            <artifactSet>
                                <excludes>
                                    <exclude>junit:junit</exclude>
                                    <exclude>org.hamcrest:hamcrest-core</exclude>
                                </excludes>
                            </artifactSet>

                            <relocations>
                                <relocation>
                                    <pattern>com.google.gson</pattern>
                                    <shadedPattern>com.absolutgg.absolutevents.libs.gson</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>com.zaxxer.hikari</pattern>
                                    <shadedPattern>com.absolutgg.absolutevents.libs.hikari</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>com.iridium.iridiumcolorapi</pattern>
                                    <shadedPattern>com.absolutgg.absolutevents.libs.iridiumcolorapi</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>com.henryfabio.minecraft.inventoryapi</pattern>
                                    <shadedPattern>com.absolutgg.absolutevents.libs.inventoryapi</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>com.cryptomorin.xseries</pattern>
                                    <shadedPattern>com.absolutgg.absolutevents.libs.xseries</shadedPattern>
                                </relocation>

                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>com.absolutgg.absolutevents.libs.bstats</shadedPattern>
                                </relocation>
                            </relocations>

                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                        <exclude>META-INF/versions/**/module-info.class</exclude>
                                        <exclude>module-info.class</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
</project>